; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/mediatek/extr_mtk_hdmi.c_mtk_hdmi_send_infoframe.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/mediatek/extr_mtk_hdmi.c_mtk_hdmi_send_infoframe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mtk_hdmi = type { i32 }
%struct.drm_display_mode = type { i32 }

@.str = private unnamed_addr constant [9 x i8] c"mediatek\00", align 1
@.str.1 = private unnamed_addr constant [13 x i8] c"On-chip HDMI\00", align 1
@DRM_MODE_FLAG_3D_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mtk_hdmi*, %struct.drm_display_mode*)* @mtk_hdmi_send_infoframe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mtk_hdmi_send_infoframe(%struct.mtk_hdmi* %0, %struct.drm_display_mode* %1) #0 {
  %3 = alloca %struct.mtk_hdmi*, align 8
  %4 = alloca %struct.drm_display_mode*, align 8
  store %struct.mtk_hdmi* %0, %struct.mtk_hdmi** %3, align 8
  store %struct.drm_display_mode* %1, %struct.drm_display_mode** %4, align 8
  %5 = load %struct.mtk_hdmi*, %struct.mtk_hdmi** %3, align 8
  %6 = call i32 @mtk_hdmi_setup_audio_infoframe(%struct.mtk_hdmi* %5)
  %7 = load %struct.mtk_hdmi*, %struct.mtk_hdmi** %3, align 8
  %8 = load %struct.drm_display_mode*, %struct.drm_display_mode** %4, align 8
  %9 = call i32 @mtk_hdmi_setup_avi_infoframe(%struct.mtk_hdmi* %7, %struct.drm_display_mode* %8)
  %10 = load %struct.mtk_hdmi*, %struct.mtk_hdmi** %3, align 8
  %11 = call i32 @mtk_hdmi_setup_spd_infoframe(%struct.mtk_hdmi* %10, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0))
  %12 = load %struct.drm_display_mode*, %struct.drm_display_mode** %4, align 8
  %13 = getelementptr inbounds %struct.drm_display_mode, %struct.drm_display_mode* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* @DRM_MODE_FLAG_3D_MASK, align 4
  %16 = and i32 %14, %15
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %22

18:                                               ; preds = %2
  %19 = load %struct.mtk_hdmi*, %struct.mtk_hdmi** %3, align 8
  %20 = load %struct.drm_display_mode*, %struct.drm_display_mode** %4, align 8
  %21 = call i32 @mtk_hdmi_setup_vendor_specific_infoframe(%struct.mtk_hdmi* %19, %struct.drm_display_mode* %20)
  br label %22

22:                                               ; preds = %18, %2
  ret void
}

declare dso_local i32 @mtk_hdmi_setup_audio_infoframe(%struct.mtk_hdmi*) #1

declare dso_local i32 @mtk_hdmi_setup_avi_infoframe(%struct.mtk_hdmi*, %struct.drm_display_mode*) #1

declare dso_local i32 @mtk_hdmi_setup_spd_infoframe(%struct.mtk_hdmi*, i8*, i8*) #1

declare dso_local i32 @mtk_hdmi_setup_vendor_specific_infoframe(%struct.mtk_hdmi*, %struct.drm_display_mode*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
